# holydbg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.cmake
cmake/: BuildConfigH.cmake  BuildUnit.cmake
distorm/: CMakeLists.txt  README.md  config.h.cmake  distorm_conf.h.cmake  distorm_config.h.cmake
distorm/cmake/: BuildConfigH.cmake
distorm/disOps/: disOps.py  output.txt
distorm/include/: distorm.h  mnemonics.h
distorm/include/distorm3/: config.h  distorm.h  distorm_dll.h  mnemonics.h
distorm/src/: CMakeLists.txt  config.h  decoder.c  decoder.h  distorm.c  endian.h  instructions.c  insts.c  insts.h  mnemonics.c  operands.c  operands.h  prefix.c  prefix.h  textdefs.c  textdefs.h  wstring.c  wstring.h
include/hdbg/: arch_services.hpp  binary_format.hpp  config.h  hdbg.hpp  hdbg_dll.hpp  sys_types.hpp  this_process.hpp
include/hdbg/arch/: code_tracer.hpp  decoded_inst.hpp  endian.hpp  raw_context.hpp  reg_info.hpp  reg_value.hpp  trace_sink.hpp
include/hdbg/arch/x86_64/: reg_ids.hpp
include/hdbg/binfmt/: from_image.hpp
include/hdbg/dbg/: breakpoint.hpp  breakpoint_manager.hpp  debug_event.hpp  debug_process.hpp  debug_thread.hpp  debuggee.hpp  thread_context.hpp
include/hdbg/dbg/bps/: hw_breakpoint.hpp  sw_breakpoint.hpp
include/hdbg/dbg/local/: debug_process.hpp  debug_thread.hpp  debuggee.hpp
include/hdbg/enum/: enum_mempages.hpp  enum_processes.hpp  enum_threads.hpp
include/hdbg/utils/: event_emitter.hpp  event_listener.hpp  type_list.hpp
include/holydbg/: arch_introspection.hpp  arch_services.hpp  binary_format.hpp  sys_types.hpp  this_process.hpp
include/holydbg/arch/: endian.hpp  raw_context.hpp
include/holydbg/binfmt/: from_image.hpp
include/holydbg/dbg/: breakpoint.hpp  breakpoint_manager.hpp  debug_event.hpp  debug_process.hpp  debug_thread.hpp  debuggee.hpp  thread_context.hpp
include/holydbg/dbg/bps/: hw_breakpoint.hpp  sw_breakpoint.hpp
include/holydbg/dbg/local/: debug_process.hpp  debug_thread.hpp  debuggee.hpp
include/holydbg/enum/: enum_mempages.hpp  enum_processes.hpp  enum_threads.hpp
include/holydbg/utils/: event_emitter.hpp  event_listener.hpp
src/: CMakeLists.txt  config.h
src/hdbg/: CMakeLists.txt  hdbg.cc
src/hdbg/arch/: CMakeLists.txt  arch_internals.hpp  arch_services.cc  code_tracer.cc  endian.hpp  raw_context.cc  raw_context.hpp  trace_sink.cc
src/hdbg/arch/intel/: CMakeLists.txt  debug_control_reg.cc  debug_control_reg.hpp
src/hdbg/arch/intel/x86_64/: arch_internals.cc  arch_internals.hpp  arch_services.cc  arch_services.hpp  raw_context.hpp  reg_ids.hpp  reg_info.hpp
src/hdbg/binfmt/: CMakeLists.txt  from_image.cc
src/hdbg/binfmt/elf/: elf.hpp
src/hdbg/binfmt/elf/from_image/: elf_image.cc  elf_image.hpp
src/hdbg/dbg/: CMakeLists.txt  breakpoint_manager.cc  breakpoint_manager.hpp  debuggee.cc  thread_context.cc
src/hdbg/dbg/bps/: CMakeLists.txt  hw_breakpoint.cc  sw_breakpoint.cc
src/hdbg/os/linux/: CMakeLists.txt  process_kill_guard.cc  process_kill_guard.hpp  process_stop_guard.cc  process_stop_guard.hpp  this_process.cc
src/hdbg/os/linux/arch/intel/x86_64/: raw_context.cc
src/hdbg/os/linux/dbg/local/: CMakeLists.txt  debug_process.cc  debug_thread.cc  debuggee.cc  pt_runner.cc  pt_runner.hpp
src/hdbg/os/linux/enum/: enum_mempages.cc  enum_processes.cc  enum_threads.cc
src/hdbg/tests/: CMakeLists.txt  binfmt_img_unittest.cc  dbg_proc_unittest.cc  debuggee_unittest.cc  endian_unittest.cc  enum_proc_unittest.cc  enum_thr_unittest.cc  events_unittest.cc  local_debuggee_unittest.cc  runner_unittest.cc  thr_ctx_unittest.cc  tracer_unittest.cc
src/hdbg/utils/: CMakeLists.txt  runner.cc  runner.hpp  volatile_modify.hpp
src/holydbg/: AboutDialog.qml  CMakeLists.txt  QBreakpoint.cc  QBreakpoint.hpp  QDebugEventListener.cc  QDebugEventListener.hpp  QDebugProcess.cc  QDebugProcess.hpp  QDebugThread.cc  QDebugThread.hpp  QDebuggee.cc  QDebuggee.hpp  QHdbgObject.hpp  QHolyDbgModule.cc  QHolyDbgModule.hpp  QThreadContext.cc  QThreadContext.hpp  config.h  main.cc  main.qml
src/holydbg/arch/: CMakeLists.txt  QX64.cc  QX64.hpp  arch_internals.hpp  arch_introspection.cc  arch_services.cc  raw_context.cc
src/holydbg/arch/intel/: debug_control_reg.cc  debug_control_reg.hpp
src/holydbg/arch/intel/x86_64/: CMakeLists.txt  arch_internals.cc  arch_internals.hpp  arch_introspection.cc  arch_introspection.hpp  arch_services.hpp  raw_context.hpp  reg_ids.hpp  reg_info.hpp
src/holydbg/arch/x86_64/: arch_internals.cc  arch_internals.hpp  arch_services.cc  arch_services.hpp  raw_context.hpp
src/holydbg/binfmt/: from_image.cc
src/holydbg/binfmt/elf/: CMakeLists.txt  elf.hpp
src/holydbg/binfmt/elf/from_image/: CMakeLists.txt  elf_image.cc  elf_image.hpp
src/holydbg/dbg/: breakpoint_manager.cc  debuggee.cc  thread_context.cc
src/holydbg/dbg/bps/: CMakeLists.txt  hw_breakpoint.cc  sw_breakpoint.cc
src/holydbg/os/: CMakeLists.txt
src/holydbg/os/linux/: process_kill_guard.hpp  process_stop_guard.hpp  this_process.cc
src/holydbg/os/linux/arch/: CMakeLists.txt
src/holydbg/os/linux/arch/intel/x86_64/: raw_context.cc
src/holydbg/os/linux/arch/x86_64/: CMakeLists.txt  raw_context.cc
src/holydbg/os/linux/dbg/local/: CMakeLists.txt  debug_process.cc  debug_thread.cc  debuggee.cc
src/holydbg/os/linux/enum/: CMakeLists.txt  enum_mempages.cc  enum_processes.cc  enum_threads.cc
src/holydbg/tests/: binfmt_img_unittest.cc  dbg_proc_unittest.cc  debuggee_unittest.cc  endian_unittest.cc  enum_proc_unittest.cc  enum_thr_unittest.cc  events_unittest.cc  thr_ctx_unittest.cc
src/holydbg/utils/: volatile_modify.hpp
